test_deployment/vrpoc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vrpoc-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: vrpoc

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: vrpoc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vrpoc
  template:
    metadata:
      labels:
        app: vrpoc
    spec:
      containers:
      - name: vrpoc
        image: oze4/vue-router-poc
        ports:
        - containerPort: 80
        
---
