test_deployment/vrpoc-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vrpoc-ingress
  annotations:  
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-cluster-issuer" # Must be the name of the issuer you set up
spec:
  tls:
  - hosts:
    - vrpoc.litpoc.com
    secretName: letsencrypt-prod # Must be unique per ingress resource 
  rules:
  - host: vrpoc.litpoc.com
    http:
      paths:
      - backend:
          serviceName: vrpoc-service
          servicePort: 80
